--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Simon Sahilu - Web Developer</title>
 </head>
 <body>
@@ -16,21 +14,13 @@
           <div class="site-header">Simon Sahilu</div>
           <div class="site-subheader">Web Developer</div>
           <ul class="site-navigation">
-          <li>
-            <a href="index.html">
-             <i class="material-icons">home</i>
-             Home
-        </a>
-      </li>
+        <li><a href="index.html">Home</a></li>
     </ul>
   </div>
 </nav>
 <main>
   <div class="menu">
   <div class="menu-icon" id="sidebarCollapse">
-  <i class="material-icons">
-    list
-  </i>
    <span class="mobile-header">Simon Sahilu: Web Developer</span>
  </div>
 </div>
