--- a/index.html
+++ b/index.html
@@ -35,48 +35,30 @@
 <article>
  <h2>My experience with git</h2>
  <hr />
- <h3>Thursday October 3, 2018</h3>
+ <h3>Thursday October 17, 2019</h3>
  <p>
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dapibus mauris eu nunc
-   dictum, sit amet elementum turpis viverra. Morbi vel tristique sem. Vivamus vel finibus velit, sit amet
-   dictum enim. Sed ac risus mi. Maecenas non lectus vitae magna laoreet pretium. Aenean leo turpis, facilisis
-   sed suscipit non, viverra non ex. Duis elementum lorem nulla, nec sollicitudin eros feugiat in. In
-   dignissim maximus nibh, eu faucibus nisl suscipit eget.
+   In web development version controlling is central concept. Git, being the best of version controlling systems it is very important to understand the inner workings of this system. Starting from day one when I start my web development carrier at Gerorge Washington coding bootcamp, I worked with github working on my codes and other people's code. I have a  good experience pushing, branching and merging codes, raising issues, submitting pull requests, resolving conflicts and using stash and pop. All in all I have a very good working knowledge in git and github.
  </p>
  <p>
-   Cras ac odio viverra, semper est id, facilisis lectus. Aliquam eget sollicitudin eros, at posuere lorem.
-   Sed consectetur libero elit, sit amet ultrices eros auctor mollis. Praesent egestas blandit rutrum. Phasellus vel pretium nulla. Donec ut varius sapien. In maximus tincidunt lorem egestas eleifend. Vestibulum cursus ante
-   eget urna tempor, quis viverra mauris viverra. Ut nibh lorem, bibendum in accumsan quis, ullamcorper sed
-   tortor. Integer blandit aliquam nibh in pulvinar. Curabitur a malesuada purus, at scelerisque ligula. Morbi
-   malesuada pellentesque neque, id condimentum purus finibus eu.
+   I will also blog about full stack web development mainly concentrating on ruby on rails and javascript. I will post the links for some of the web applications I have developed showcasing the skills and knowledge I gained.  
+
+    
  </p>
 </article>
 <article>
  <h2>Welcome</h2>
  <hr />
- <h3>Thursday October 1, 2018</h3>
+ <h3>Thursday October 17, 2019</h3>
  <p>
-   Lorem ipsum dolor sit amet consectetur adipiscing elit. Morbi dapibus mauris eu nunc
-   dictum, sit amet elementum turpis viverra. Morbi vel tristique sem. Vivamus vel finibus velit, sit amet
-   dictum enim. Sed ac risus mi. Maecenas non lectus vitae magna laoreet pretium. Aenean leo turpis, facilisis
-   sed suscipit non, viverra non ex. Duis elementum lorem nulla, nec sollicitudin eros feugiat in. In
-   dignissim
-   maximus nibh, eu faucibus nisl suscipit eget.
+   Welcome to my first personal blog were I post my coding experience and share the knowledge I gather along the way. In this blog I will be posting all about coing and what I learn in my life journey as a developer. My approach is presenting complex web development and coding concepts in layman terms making it attrackive to people coming from diffrent walks of life.   
  </p>
  <p>
-   Cras ac odio viverra, semper est id, facilisis lectus. Aliquam eget sollicitudin eros, at posuere lorem.
-   Sed
-   consectetur libero elit, sit amet ultrices eros auctor mollis. Praesent egestas blandit rutrum. Phasellus
-   vel
-   pretium nulla. Donec ut varius sapien. In maximus tincidunt lorem egestas eleifend. Vestibulum cursus ante
-   eget urna tempor, quis viverra mauris viverra. Ut nibh lorem, bibendum in accumsan quis, ullamcorper sed
-   tortor. Integer blandit aliquam nibh in pulvinar. Curabitur a malesuada purus, at scelerisque ligula. Morbi
-   malesuada pellentesque neque, id condimentum purus finibus eu.
+   I highly appriciate any input and suggestion about my blog please fill free to drop me a message or shot me an email.   
  </p>
 </article>
 
 <footer>
-  Made with ❤️ in 2167 Astoria circle Apt 112, VA 20170. © 2018 All Rights Reserved
+  Made with ❤️ in 2167 Astoria circle Apt 112, VA 20170. © 2019 All Rights Reserved
 </footer>
 
 </main>
