Adjusted the contents

--- a/about.html
+++ b/about.html
@@ -29,20 +29,12 @@
   </div>
   <h1>About</h1>
   <article>
-    <img class="about-image" src="http://via.placeholder.com/200" />
+    <img class="about-image" src="me.jpg" />
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dapibus mauris eu
-      nunc dictum, sit amet elementum turpis viverra. Morbi vel tristique sem. Vivamus vel finibus velit,
-      sit amet dictum enim. Sed ac risus mi. Maecenas non lectus vitae magna laoreet pretium. Aenean leo
-      turpis, facilisis sed suscipit non, viverra non ex. Duis elementum lorem nulla, nec sollicitudin eros feugiat in.
-      In dignissim maximus nibh, eu faucibus nisl suscipit eget.
+      My name is Simon, 
     </p>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dapibus mauris eu
-      nunc dictum, sit amet elementum turpis viverra. Morbi vel tristique sem. Vivamus vel finibus velit,
-      sit amet dictum enim. Sed ac risus mi. Maecenas non lectus vitae magna laoreet pretium. Aenean leo
-      turpis, facilisis sed suscipit non, viverra non ex. Duis elementum lorem nulla, nec sollicitudin eros feugiat in.
-      In dignissim maximus nibh, eu faucibus nisl suscipit eget.
+      I am a web developer, graduated from George Washington coding bootcamp. I have learned all the hype tips and tricks from the best. I have a stong knowledge of ruby on rails and javascript languages. I am dedicated to learning, always pushing to excellence. Humble, fun loving at brakes and strict at work. 
     </p>
   </article>
   <footer>
