--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
   </ul>
   <h2>Or drop me an <a href="#"><i class="fas fa-envelope"></i> e-mail</a>.</h2>
   <footer>
-    Made with ❤️ in Your Location Here. © 2018 All Rights Reserved
+    Made with ❤️ in Astoria Circle Apt 112, Herndon VA 20170. © 2018 All Rights Reserved
   </footer>
 </main>
 
